[gd_scene load_steps=25 format=2]

[ext_resource path="res://src/assets/menu_assets/spaceHintergrund.png" type="Texture" id=1]
[ext_resource path="res://src/assets/menu_assets/04B_30__.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://src/assets/menu_assets/ButtonTextur.png" type="Texture" id=3]
[ext_resource path="res://src/assets/menu_assets/Geist SpriteSheet.png" type="Texture" id=4]
[ext_resource path="res://src/assets/menu_assets/ButtonTexturHover.png" type="Texture" id=5]
[ext_resource path="res://src/scripts/Menu.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 9
outline_color = Color( 0.141176, 0.419608, 0.568627, 1 )
extra_spacing_space = -21
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]

[sub_resource type="DynamicFont" id=6]
size = 32
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = 6
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 361, 101 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 361, 101 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 361, 101 )

[sub_resource type="DynamicFont" id=10]
size = 22
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = 3
extra_spacing_char = 2
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 361, 101 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 361, 101 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 361, 101 )

[sub_resource type="DynamicFont" id=14]
size = 32
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = 5
extra_spacing_char = 5
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 361, 101 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 361, 101 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 361, 101 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 144, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 192, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 240, 240, 48, 48 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hintergrund" type="TextureRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.473
margin_left = -510.0
margin_right = 511.0
margin_bottom = -84.8
custom_fonts/font = SubResource( 1 )
text = "DON'T GIVE UP YOUR GHOST"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 128.0
margin_top = -108.0
margin_right = 449.0
margin_bottom = -51.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Einstellungen" type="Button" parent="."]
margin_left = 128.0
margin_top = 320.0
margin_right = 448.0
margin_bottom = 384.0
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "EINSTELLUNGEN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ENDE" type="Button" parent="."]
margin_left = 128.0
margin_top = 448.0
margin_right = 448.0
margin_bottom = 504.0
custom_fonts/font = SubResource( 14 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
text = "ENDE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 755.822, 322.431 )
scale = Vector2( 2.81113, 2.31242 )
frames = SubResource( 18 )
speed_scale = 0.8
playing = true

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Einstellungen" to="." method="_on_Einstellungen_pressed"]
[connection signal="pressed" from="ENDE" to="." method="_on_ENDE_pressed"]
